--- a/layersbox-studio/Dockerfile
+++ b/layersbox-studio/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /opt
 # Download Swagger-UI
 RUN wget http://layers.dbis.rwth-aachen.de/jenkins/job/Layers%20Box%20Studio/lastBuild/artifact/build/bundled/*zip*/bundled.zip \
   && unzip bundled.zip \
-  && cp -r bundled/* /var/www/nginx-default
+  && cp -r bundled/* /var/www/html/
 
 # Provide default port if random port mapping invoked
 EXPOSE 80 
